fix for orientation crash

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,8 @@
         <item>Bulbasaur</item>
         <item>Charmander</item>
         <item>Squirtle</item>
-        <item>Nidoran Male</item>
-        <item>Nidoran Female</item>
+        <item>Nidoran ♂</item>
+        <item>Nidoran ♀</item>
         <item>Poliwag</item>
         <item>Abra</item>
         <item>Machop</item>
