--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,29 +5,100 @@
     <string name="id_select">Select a Pokemon:</string>
     <string name="id_numCandies"># of Candies:</string>
     <string name="id_numPokemon"># of Pokemon:</string>
+    <string name="id_category1">12 Candies (Common)</string>
     <string name="button_calculate">Calculate</string>
     <string name="button_reset">Reset</string>
-    <string-array name="pokemon">
-        <item>Pidgey</item>
-        <item>Weedle</item>
-        <item>Caterpie</item>
-        <item>Rattata</item>
-        <item>Eevie</item>
-        <item>Oddish</item>
+    <string-array name="categories">
+        <item>12 Candies (Common)</item>
+        <item>25 Candies (Common)</item>
+        <item>50 Candies (Common)</item>
+        <item>25 Candies</item>
+        <item>50 Candies</item>
+        <item>100 Candies</item>
+        <item>400 Candies</item>
+    </string-array>
+    <string-array name="pokemon_12common">
+        <item>12 Candies (Common) - Pidgey</item>
+        <item>12 Candies (Common) - Weedle</item>
+        <item>12 Candies (Common) - Caterpie</item>
+    </string-array>
+    <string-array name="pokemon_25common">
+        <item>25 Candies (Common)- Rattata</item>
+        <item>25 Candies (Common)- Eevee</item>
+        <item>25 Candies (Common)- Oddish</item>
+    </string-array>
+    <string-array name="pokemon_50common">
         <item>Zubat</item>
         <item>Drowzee</item>
         <item>Spearow</item>
+    </string-array>
+    <string-array name="pokemon_25">
         <item>Bulbasaur</item>
         <item>Charmander</item>
         <item>Squirtle</item>
-        <item>Nidoran ♂</item>
         <item>Nidoran ♀</item>
+        <item>Nidoran ♂</item>
         <item>Poliwag</item>
         <item>Abra</item>
         <item>Machop</item>
         <item>Bellsprout</item>
         <item>Geodude</item>
-        <item>Ghastly</item>
+        <item>Gastly</item>
         <item>Dratini</item>
+    </string-array>
+    <string-array name="pokemon_50">
+        <item>Metapod</item>
+        <item>Kakuna</item>
+        <item>Pidgeotto</item>
+        <item>Ekans</item>
+        <item>Pikachu</item>
+        <item>Sandshrew</item>
+        <item>Clefairy</item>
+        <item>Vulpix</item>
+        <item>Jigglypuff</item>
+        <item>Paras</item>
+        <item>Venonat</item>
+        <item>Diglett</item>
+        <item>Meowth</item>
+        <item>Psyduck</item>
+        <item>Mankey</item>
+        <item>Growlithe</item>
+        <item>Tentacool</item>
+        <item>Ponyta</item>
+        <item>Slowpoke</item>
+        <item>Magnemite</item>
+        <item>Doduo</item>
+        <item>Seel</item>
+        <item>Grimer</item>
+        <item>Shellder</item>
+        <item>Krabby</item>
+        <item>Voltorb</item>
+        <item>Exeggcute</item>
+        <item>Cubone</item>
+        <item>Koffing</item>
+        <item>Rhyhorn</item>
+        <item>Horsea</item>
+        <item>Goldeen</item>
+        <item>Staryu</item>
+        <item>Omanyte</item>
+        <item>Kabuto</item>
+    </string-array>
+    <string-array name="pokemon_100">
+        <item>Ivysaur</item>
+        <item>Charmeleon</item>
+        <item>Wartortle</item>
+        <item>Nidorina</item>
+        <item>Nidorino</item>
+        <item>Gloom</item>
+        <item>Poliwhirl</item>
+        <item>Kadabra</item>
+        <item>Machoke</item>
+        <item>Weepinbell</item>
+        <item>Graveler</item>
+        <item>Haunter</item>
+        <item>Dragonair</item>
+    </string-array>
+    <string-array name="pokemon_400">
+        <item>Magikarp</item>
     </string-array>
 </resources>
